[gd_scene load_steps=15 format=3 uid="uid://b41y3qaub0rna"]

[ext_resource type="Script" uid="uid://blfx22055wjwc" path="res://Levels/main_lvl_4.gd" id="1_tm4t6"]
[ext_resource type="Texture2D" uid="uid://bfgjf0iyokkp4" path="res://Assets/Pixel Health Bar/Bar/no health bar.png" id="3_k2cak"]
[ext_resource type="PackedScene" uid="uid://b44ebn5xhv34r" path="res://Players/Player scenes/characterBodyP1.tscn" id="3_tm4t6"]
[ext_resource type="Script" uid="uid://dtdcfjsj4r8i0" path="res://Levels/parallax_background_lvl4.gd" id="4_jimy6"]
[ext_resource type="Texture2D" uid="uid://ctysprhh2qur0" path="res://Assets/Pixel Health Bar/Bar/health bar.png" id="4_tm4t6"]
[ext_resource type="PackedScene" uid="uid://ckmiuk6k2658l" path="res://Players/Player scenes/characterBodyP2.tscn" id="4_vi2yg"]
[ext_resource type="Texture2D" uid="uid://bvccngnd3tt2b" path="res://Assets/2D Space Parallax Backgrounds/layers/black_bg.png" id="6_qr2eo"]
[ext_resource type="FontFile" uid="uid://q6c0g5avw7b" path="res://Tektur_MainFont/Tektur-VariableFont_wdth,wght.ttf" id="6_vi2yg"]
[ext_resource type="Texture2D" uid="uid://b71b1etq41ye2" path="res://Assets/2D Space Parallax Backgrounds/layers/nebula.png" id="7_ovuje"]
[ext_resource type="Texture2D" uid="uid://60hvkelfx71c" path="res://Assets/2D Space Parallax Backgrounds/layers/small_stars.png" id="8_jn4s6"]
[ext_resource type="Texture2D" uid="uid://diwt20qjdcldu" path="res://Assets/2D Space Parallax Backgrounds/layers/big_stars.png" id="9_k3o1g"]
[ext_resource type="AudioStream" uid="uid://bwrifjcdwev3b" path="res://Sounds/Level sounds/DavidKBD - Eternity Pack - 05 - Evil soul inside - oneshoot.ogg" id="12_ajbwj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vi2yg"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ehyo"]
bg_color = Color(0.288676, 0.443648, 0.194062, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MainLvl_4" type="Node2D"]
script = ExtResource("1_tm4t6")

[node name="CharacterBodyP1" parent="." instance=ExtResource("3_tm4t6")]
position = Vector2(195, 269)

[node name="CharacterBodyP2" parent="." instance=ExtResource("4_vi2yg")]
position = Vector2(142, 138)

[node name="HUD" type="CanvasLayer" parent="." groups=["gameplay"]]

[node name="WeaponLockedLabel" type="Label" parent="HUD"]
offset_left = 191.0
offset_top = 35.0
offset_right = 1381.0
offset_bottom = 165.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("6_vi2yg")
theme_override_font_sizes/font_size = 65
horizontal_alignment = 1

[node name="LevelProgressBar" type="ProgressBar" parent="HUD"]
offset_left = 228.0
offset_top = 35.0
offset_right = 251.0
offset_bottom = 235.0
rotation = 4.71239
theme_override_styles/background = SubResource("StyleBoxFlat_vi2yg")
theme_override_styles/fill = SubResource("StyleBoxFlat_0ehyo")
value = 50.0
fill_mode = 2
show_percentage = false

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="P1HealthBar" type="TextureProgressBar" parent="HUD/Control"]
layout_mode = 0
offset_left = 1.0
offset_right = 129.0
offset_bottom = 40.0
texture_under = ExtResource("3_k2cak")
texture_progress = ExtResource("4_tm4t6")

[node name="P1HealthBar2" type="Label" parent="HUD/Control"]
layout_mode = 0
offset_left = 5.0
offset_top = 15.0
offset_right = 309.0
offset_bottom = 121.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("6_vi2yg")
theme_override_font_sizes/font_size = 70
text = "PLAYER 1"

[node name="P1PercentLabel" type="Label" parent="HUD/Control"]
layout_mode = 0
offset_left = 49.0
offset_top = -1.0
offset_right = 204.0
offset_bottom = 90.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("6_vi2yg")
theme_override_font_sizes/font_size = 70
text = "100"

[node name="P1ScoreLabel" type="Label" parent="HUD/Control" groups=["p1_score_label"]]
layout_mode = 0
offset_left = 5.0
offset_top = 35.0
offset_right = 286.0
offset_bottom = 175.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("6_vi2yg")
theme_override_font_sizes/font_size = 70
text = "Score: 0"

[node name="WeaponLabel_P1" type="Label" parent="HUD/Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 57.0
offset_right = 502.0
offset_bottom = 122.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("6_vi2yg")
theme_override_font_sizes/font_size = 50
text = "No Weapon Selected"

[node name="Control2" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="P2HealthBar" type="TextureProgressBar" parent="HUD/Control2"]
modulate = Color(0.4, 1, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -89.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture_under = ExtResource("3_k2cak")
texture_progress = ExtResource("4_tm4t6")

[node name="P2HealthBar2" type="Label" parent="HUD/Control2"]
layout_mode = 0
offset_left = -84.0
offset_top = 17.0
offset_right = 34.0
offset_bottom = 43.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("6_vi2yg")
theme_override_font_sizes/font_size = 70
text = "PLAYER 2"

[node name="P2PercentLabel" type="Label" parent="HUD/Control2"]
layout_mode = 0
offset_left = -40.0
offset_top = 1.0
offset_right = 81.0
offset_bottom = 101.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("6_vi2yg")
theme_override_font_sizes/font_size = 70
text = "100"

[node name="P2ScoreLabel" type="Label" parent="HUD/Control2" groups=["p2_score_label"]]
layout_mode = 0
offset_left = -84.0
offset_top = 37.0
offset_right = 197.0
offset_bottom = 132.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("6_vi2yg")
theme_override_font_sizes/font_size = 70
text = "Score: 0"

[node name="WeaponLabel_P2" type="Label" parent="HUD/Control2"]
layout_mode = 0
offset_left = -115.0
offset_top = 58.0
offset_right = 381.0
offset_bottom = 123.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("6_vi2yg")
theme_override_font_sizes/font_size = 50
text = "No Weapon Selected"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("4_jimy6")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.25, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("6_qr2eo")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(-2, -2)
texture = ExtResource("7_ovuje")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("8_jn4s6")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1.5, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource("9_k3o1g")
centered = false

[node name="DeathAnnouncement" type="Label" parent="." groups=["death_announcement"]]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Player 1 has died!
"

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_ajbwj")

[node name="SeekDelayTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="SeekDelayTimer" to="." method="_on_seek_delay_timer_timeout"]
